examples/test/testpolicy18128.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18128
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key38: value4
      key32: value19
      key47: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value38
          key43: value13
      podSelector:
        matchLabels:
          key29: value7
          key23: value31
